--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -9,12 +9,16 @@
 .imageContainer {
     position: relative;
     cursor: pointer;
+    width: 100%;
+    height: 300px; /* Set a fixed height for the image container */
+    overflow: hidden; /* Ensure images don’t overflow the container */
 }
 
 .root img {
     display: block;
     width: 100%;
-    object-fit: cover;
+    height: 100%; /* Ensures the image takes the full container height */
+    object-fit: cover; /* Keeps the aspect ratio and covers the container, cropping if necessary */
     border-radius: 1px;
 }
 
@@ -59,15 +63,12 @@
     position: absolute;
     bottom: 0px;
     right: 0px;
-
     width: 70px;
     height: 70px;
     background-color: var(--standard-white);
-
     display: flex;
     align-items: center;
     justify-content: center;
-
     visibility: hidden;
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
@@ -82,7 +83,6 @@
     position: absolute;
     top: 32px;
     right: 32px;
-
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.3s ease-in-out;
@@ -98,11 +98,10 @@
     top: 0px;
     left: 0px;
     color: var(--standard-gold);
-
     transition: opacity 0.3s ease-in-out;
 }
 
-.heartFillContainer svg{
+.heartFillContainer svg {
     width: 20px;
     height: 20px;
 }
@@ -130,8 +129,8 @@
 }
 
 @media (max-width: 600px) {
-    .imageContainer img{
-        height: 300px !important;
+    .imageContainer {
+        height: 250px; /* Adjust the height for smaller screens */
     }
 
     .productName {
@@ -147,8 +146,8 @@
 }
 
 @media (max-width: 400px) {
-    .imageContainer img{
-        height: 220px !important;
+    .imageContainer {
+        height: 220px; /* Further reduce the height on smaller screens */
     }
 
     .bagContainer {
