--- a/src/components/QuickView/QuickView.module.css
+++ b/src/components/QuickView/QuickView.module.css
@@ -75,13 +75,16 @@
 }
 
 .thumbnail {
-    width: 80px;
+    width: 100px;
     height: 80px;
     margin: 0 5px;
     cursor: pointer;
     border: 2px solid transparent;
     border-radius: 1px;
     transition: border 0.3s ease;
+
+    /* Ensures the image fits the container without stretching */
+    object-fit: cover;
 }
 
 .thumbnail:hover {
