--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -42,6 +42,7 @@
 .linkTitle {
     font-size: 18px;
     margin-bottom: 24px;
+    width: 600px;
     display: block;
     color: var(--standard-white);
 }
