--- a/src/pages/furniture/furniture.module.css
+++ b/src/pages/furniture/furniture.module.css
@@ -46,6 +46,10 @@
     /* Slight background change on hover */
 }
 
+.categoryNameStyles {
+    font-weight: 300;
+}
+
 /* Chevron styling */
 .chevronDown {
     width: 12px;
